ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx
  rules:
  - http:  # by path
      paths:
      - path: /hw1
        pathType: Prefix
        backend:
          service:
            name: hello-un
            port:
              number: 80
  - host: hw2.kub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-deux
            port:
              number: 80
